--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
 
 <body>
 
-<h3> As the Interim Production Coordinator in the Department of Engineering Professional Development, I produced a high volume of templated brochures, but I also collaborated with our Marketing Department and Program Directors to create a small number of custom, one-off pieces. The "Course Connections" flier was printed and included in each of our course notebooks and the "Master of Engineering Systems" booklet was used to promote our online degree programs.</h3>
+<h3> The "Course Connections" flier was printed and included in each of our course notebooks and the "Master of Engineering Systems" booklet was used to promote our online degree programs.</h3>
 
 <h2>Engineering Professional Development</h2>
 
-<h4>Course Connections Flyer</h4>
-<link href="https://fonts.googleapis.com/css?family=Spinnaker" rel="stylesheet">
-
-<img class="resize" src="2017 EPD Connections Handout - 4C copy.jpg"/>
+<img src="2017 EPD Connections Handout - 4C copy.jpg">
+<h3> The "Course Connections" flier was printed and included in each of our course notebooks and the "Master of Engineering Systems" booklet was used to promote our online degree programs.</h3>
 
 <div class="row">
   <div class="column">
@@ -28,26 +26,26 @@
     <img src="MEES Booklet_8.jpg">
     <img src="MEES Booklet_23.jpg">
   </div>
+
   <div class="column">
     <img src="MEES Booklet_67.jpg">
     <img src="MEES Booklet_89.jpg">
     <img src="MEES Booklet_672.jpg">
   </div>
+
   <div class="column">
     <img src="MEES Booklet_1213.jpg">
     <img src="MEES Booklet_2223.jpg">
     <img src="MEES Booklet_22232.jpg">
   </div>
+</div>
 
 <h2>JHome at Johns Hopkins</h2>
-
   <div class="resize">
     <img src="JHome Logo.png">
     <img src="sticker_large.png">
     <img src="j-home sticker.png">
   </div>
-
-</div>
 
 </body>
 
