--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 
 <body>
 
-<h3> The "Course Connections" flier was printed and included in each of our course notebooks and the "Master of Engineering Systems" booklet was used to promote our online degree programs.</h3>
-
 <h2>Engineering Professional Development</h2>
 
 <img src="2017 EPD Connections Handout - 4C copy.jpg">
-<h3> The "Course Connections" flier was printed and included in each of our course notebooks and the "Master of Engineering Systems" booklet was used to promote our online degree programs.</h3>
+<h3> Course Connections <span class="smaller">one-sided flier</span></h3>
 
 <div class="row">
   <div class="column">
@@ -34,12 +32,16 @@
   </div>
 </div>
 
+<h3> Master of Engineering: Engine Systems<span class="smaller">25 page booklet</span></h3>
+
 <h2>JHome at Johns Hopkins</h2>
   <div class="resize">
     <img src="JHome Logo.png">
     <img src="sticker_large.png">
     <img src="j-home sticker.png">
   </div>
+
+<h3> JHome Branding Project<span class="smaller">logo &amp sticker design</span></h3>
 
 </body>
 
