--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <h2>Engineering Professional Development</h2>
 
 <img src="2017 EPD Connections Handout - 4C copy.jpg">
-<h3> Course Connections <span class="smaller">one-sided flier</span></h3>
+<h3> Course Connections</h3>
+<h5>one-sided flier</h5>
 
 <div class="row">
   <div class="column">
@@ -32,16 +33,27 @@
   </div>
 </div>
 
-<h3> Master of Engineering: Engine Systems<span class="smaller">25 page booklet</span></h3>
+<h3>Master of Engineering: Engine Systems</h3>
+<h5>25 page booklet</h5>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+
 
 <h2>JHome at Johns Hopkins</h2>
-  <div class="resize">
-    <img src="JHome Logo.png">
+
+<img src="JHome Logo.png">
+
+<div class="row">
+  <div class="column">
     <img src="sticker_large.png">
-    <img src="j-home sticker.png">
   </div>
 
-<h3> JHome Branding Project<span class="smaller">logo &amp sticker design</span></h3>
+  <div class="column">
+    <img src="j-home sticker.png">
+  </div>
+</div>
+
+<h3> JHome Branding Project</h3>
+<h5>logo &amp sticker design</h5>
 
 </body>
 
