--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Production &amp Client Work</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  <div class="full-column row-1">
+  </div>
 
   <h1>Production <br> &amp Client Work</h1>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
@@ -15,23 +17,41 @@
 
 <h2>Engineering Professional Development</h2>
 
+<div class="border">
 <img src="2017 EPD Connections Handout - 4C copy.jpg">
+</div>
 <h3> Course Connections</h3>
 <h5>one-sided flier</h5>
 
 <div class="row">
   <div class="column">
+  <div class="border">
     <img src="MEES Booklet_2.jpg">
+  </div>
+
+  <div class="border">
     <img src="MEES Booklet_67.jpg">
+  </div>
+
+  <div class="border">
     <img src="MEES Booklet_2223.jpg">
+  </div>
   </div>
 
   <div class="column">
+
+  <div class="border">
     <img src="MEES Booklet_23.jpg">
+  </div>
+  <div class="border">
     <img src="MEES Booklet_672.jpg">
+  </div>
+  <div class="border">
     <img src="MEES Booklet_22232.jpg">
   </div>
+  </div>
 </div>
+
 
 <h3>Master of Engineering: Engine Systems</h3>
 <h5>25 page booklet</h5>
@@ -50,11 +70,15 @@
   <div class="column">
     <img src="j-home sticker.png">
   </div>
+
 </div>
 
 <h3> JHome Branding Project</h3>
 <h5>logo &amp sticker design</h5>
 
 </body>
+<div class="full-column row-2">
+</div>
+
 
 </html>
