--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <div class="border">
 <img src="2017 EPD Connections Handout - 4C copy.jpg">
 </div>
-<h3> Course Connections</h3>
-<h5>one-sided flier</h5>
+<h3>Promotional flier</h3>
+<h5>one-sided handout</h5>
 
 <div class="row">
   <div class="column">
@@ -53,8 +53,8 @@
 </div>
 
 
-<h3>Master of Engineering: Engine Systems</h3>
-<h5>25 page booklet</h5>
+<h3>Promotional booklet</h3>
+<h5>25 pages</h5>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 
 
@@ -73,12 +73,11 @@
 
 </div>
 
-<h3> JHome Branding Project</h3>
+<h3> JHome branding project</h3>
 <h5>logo &amp sticker design</h5>
 
-</body>
 <div class="full-column row-2">
 </div>
-
+</body>
 
 </html>
